<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:title="@string/label_interface"
        app:iconSpaceReserved="false">
        <ListPreference
            app:key="theme"
            app:entries="@array/pref_theme_labels"
            app:entryValues="@array/pref_theme_values"
            app:title="@string/label_theme"
            app:summary="@string/summary_theme"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            android:negativeButtonText="@string/cancel"/>
        <ListPreference
            app:key="defaultOrientation"
            app:entries="@array/pref_default_orientation_labels"
            app:entryValues="@array/pref_default_orientation_values"
            app:title="@string/label_default_orientation"
            app:summary="@string/summary_default_orientation"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            android:negativeButtonText="@string/cancel"/>
        <ListPreference
            app:key="orientationMode"
            app:entries="@array/pref_orientation_mode_labels"
            app:entryValues="@array/pref_orientation_mode_values"
            app:title="@string/label_orientation_mode"
            app:summary="@string/summary_orientation_mode"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            android:negativeButtonText="@string/cancel"/>
        <CheckBoxPreference
            app:key="generateCameratTumbnailOnce"
            app:title="@string/label_generate_camera_thumbnail_once"
            app:iconSpaceReserved="false"
            app:summary="@string/summary_generate_camera_thumbnail_once"
            app:defaultValue="1"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/label_player_settings"
        app:iconSpaceReserved="false">
        <ListPreference
            app:key="playerSurface"
            app:entries="@array/pref_player_surface_labels"
            app:entryValues="@array/pref_player_surface_values"
            app:title="@string/label_player_surface"
            app:summary="@string/summary_player_surface"
            app:defaultValue="0"
            app:iconSpaceReserved="false"/>
        <SeekBarPreference
            app:key="cachingBufferSize"
            app:title="@string/label_caching_buffer_size"
            app:summary="@string/summary_caching_buffer_size"
            app:defaultValue="200"
            app:min="10"
            android:max="1000"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            app:key="hardwareAcceleration"
            app:title="@string/label_hardware_acceleration"
            app:iconSpaceReserved="false"
            app:summary="@string/summary_hardware_acceleration"
            app:defaultValue="0"/>
        <CheckBoxPreference
            app:key="avcodesFast"
            app:title="@string/label_avcodes_fast"
            app:summary="@string/summary_avcodes_fast"
            app:iconSpaceReserved="false"
            app:defaultValue="0"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/label_others"
        app:iconSpaceReserved="false">
        <Preference
            app:key="openAddModelForm"
            app:title="@string/label_url_add_model_form"
            app:summary="@string/summary_url_add_model_form"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/label_data"
        app:iconSpaceReserved="false">
        <Preference
            app:key="createBackup"
            app:title="@string/label_create_backup"
            app:summary="@string/summary_create_backup"
            app:iconSpaceReserved="false"/>
        <Preference
            app:key="restoreBackup"
            app:title="@string/label_restore_backup"
            app:summary="@string/summary_restore_backup"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/label_about_app"
        app:iconSpaceReserved="false">
        <Preference
            app:key="appInformations"
            app:title="@string/label_app_information"
            app:iconSpaceReserved="false"/>
        <Preference
            app:key="showLicense"
            app:title="@string/label_license"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>