<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:paddingBottom="150dp">

    <EditText
        android:id="@+id/etCameraName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/label_name_camera"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:background="@drawable/edittext_selector"
        android:inputType="textPersonName"
        android:drawableRight="@drawable/ic_clear"/>
    <Button
        android:id="@+id/buttonShowMore"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:padding="0dp"
        android:text="@string/label_show_more"
        android:background="@color/background"
        style="?android:attr/borderlessButtonStyle"/>

    <LinearLayout
        android:id="@+id/llMoreForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="27dp"
        android:animateLayoutChanges="true">
        <ProgressBar
            android:id="@+id/pbLoadingProducers"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tvProducers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="10dp"
            android:visibility="gone"
            android:text="@string/label_producers"/>
        <Spinner
            android:id="@+id/spinnerProducers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:foreground="@drawable/spinner_icon"
            android:foregroundGravity="center_vertical|right"
            android:popupBackground="@color/spinnerPopupBackground"
            android:autofillHints="@string/label_port"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tvModels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="10dp"
            android:visibility="gone"
            android:text="@string/label_models"/>
        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:foreground="@drawable/spinner_icon"
            android:foregroundGravity="center_vertical|right"
            android:popupBackground="@color/spinnerPopupBackground"
            android:textColor="@color/textColor"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/label_user_name"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/label_password"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_show"/>

        <EditText
            android:id="@+id/etIp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/label_ip"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etPort"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/label_port"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="text"
            android:drawableRight="@null"/>

        <EditText
            android:id="@+id/etServerUrl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/label_server_url"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etChannel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/label_channel"
            android:text="0"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:background="@drawable/edittext_selector"
            android:inputType="text"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinnerStreamType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:entries="@array/spinner_stream"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:autofillHints="@string/label_port"
            android:background="@drawable/edittext_selector"
            android:foreground="@drawable/spinner_icon"
            android:foregroundGravity="center_vertical|right"
            android:textColor="@color/textColor"
            android:visibility="gone"
            android:popupBackground="@color/spinnerPopupBackground"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etCameraUrl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/label_camera_url"
        android:text="@string/label_camera_url"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:background="@drawable/edittext_selector"
        android:inputType="textPersonName"/>

    <LinearLayout
        android:id="@+id/llAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="18dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:text="Special variables"
                style="?android:attr/borderlessButtonStyle"
                android:textAlignment="viewStart"
                android:background="@color/background"
                android:paddingStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonAddVariable"/>

            <ImageButton
                android:id="@+id/buttonAddVariable"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_marginEnd="7dp"
                android:background="?android:attr/actionBarItemBackground"
                android:src="@drawable/ic_add"
                android:clickable="true"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lvVariables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/background"
            android:choiceMode="singleChoice"
            android:clipToPadding="false"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0dp"
            android:fadingEdgeLength="0dp"
            android:foregroundGravity="top"
            android:paddingBottom="150dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
